--- a/app/Tpl/main/fanwe/inc/pin_box.html
+++ b/app/Tpl/main/fanwe/inc/pin_box.html
@@ -26,6 +26,9 @@
 				<div class="abbr">
                 	{$row.content}
             	</div>
+				<div class="comment">
+					<a class="cmt" target="_blank" href='{url x="index" r="share#detail" p="id=$row.id" }'>{$row.comments}</a>
+				</div>
+				<div class="clear"></div>
 			</div>
 		</div>
-		
