--- a/app/Tpl/main/fanwe/scratch.html
+++ b/app/Tpl/main/fanwe/scratch.html
@@ -175,9 +175,9 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.eraser.js";
                             case '四等奖':
                                 img_url+='4.jpg';
                                 break;
-                            /*case '谢谢参与':
+                            case '谢谢参与':
                                 img_url+='xiexie.jpg';
-                                break;*/
+                                break;
 
                             default:
                                 img_url = '';
