--- a/app/Tpl/main/fanwe/scratch.html
+++ b/app/Tpl/main/fanwe/scratch.html
@@ -37,7 +37,34 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.eraser.js";
 ?>
 {include file="inc/header.html"}
 <style type="text/css">
+    .htmleaf-container{
+        background-image: url("./app/Tpl/main/fanwe/images/scratch/img//guabei.png");
+        background-position:center center;
+        background-repeat: no-repeat;
+        background-size:100% ;
+        width:1040px;
+        height:500px;
+        overflow: hidden;
+        position: relative;
+        margin:0 auto;
 
+    }
+    #bridgeContainer {
+        text-align: center;
+        font-family: Avenir, sans-serif;
+        width:285px;
+        height:145px;
+        /*margin:189px auto;*/
+        /* position: absolute;
+         top:189px;
+         left:40px;*/
+        /*overflow: hidden;*/
+        position:relative;
+        left:600px;
+        top:160px;
+
+
+    }
    #mask_img_bg{
 
        background-image:url('{$TMPL}/images/scratch/img/scratch_bg.jpg');
