--- a/admin/Tpl/default/TurntableWin/index.html
+++ b/admin/Tpl/default/TurntableWin/index.html
@@ -53,6 +53,7 @@
     <form name="search" action="__APP__" method="get">
         <div class="button_row">
             <input type="button" class="button" value="删除" onclick="foreverdel();" />
+            <input type="button" class="button" value="添加指定中奖用户信息" onclick="add();" />
         </div>
         <div class="blank5"></div>
         <div class="search_row">
