--- a/admin/Tpl/default/Statistics/duobao.html
+++ b/admin/Tpl/default/Statistics/duobao.html
@@ -66,7 +66,7 @@
             name="deal_order_item"
             action="true"
             datasource="list"
-            show="id:{%ID}|50px,name:活动名称,order_sn:订单编号,duobao_item_id:期号,user_id|get_user_name:{%USER_NAME},total_price|format_price:购买人次,create_time|to_date:{%ORDER_CREATE_TIME}"
+            show="id:{%ID}|50px,name:活动名称,order_sn:订单编号,duobao_item_id:期号,user_id|get_user_name:{%USER_NAME},create_time|to_date:{%ORDER_CREATE_TIME}"
             actionlist="id|get_handle=$deal_order_item" />
 
     <div class="blank5"></div>
