--- a/app/Tpl/main/fanwe/helpcenter.html
+++ b/app/Tpl/main/fanwe/helpcenter.html
@@ -45,6 +45,13 @@ $this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/dc/js/page_js/slider.js";
                 服务协议
             </span></a>
         </div>
+
+        <div class="w-msg-news"  >
+            <i class="diyfont"></i>
+            <a href="{url r="index" r="news" p="act=laws"}"><span class="font_h3" >
+                法律条款
+            </span></a>
+        </div>
         <div class="w-msg-catlog">
             <div class="w-msg-catlog-hd" >
                 <span class="font_h3s" >
