--- a/admin/Tpl/default/IncomeBalance/duobao.html
+++ b/admin/Tpl/default/IncomeBalance/duobao.html
@@ -8,11 +8,12 @@
 <load href='__TMPL__Common/js/jquery.weebox.js' />
 <load href='__TMPL__Common/style/weebox.css' />
 <div class="main">
-<div class="main_title">财务分析</div>
+<div class="main_title">收入分析列表</div>
 <div class="blank5"></div>
 <form name="search" action="__APP__" method="get">	
 <div class="search_row">
 
+		期号：<input type="text" class="textbox" name="id" value="{:strim($_REQUEST['id'])}" style="width:100px;" />
 		 时段：
 		<input type="text" class="textbox" name="begin_time" id="begin_time" value="{:strim($_REQUEST['begin_time'])}" onfocus="return showCalendar('begin_time', '%Y-%m-%d %H:%M:%S', false, false, 'btn_begin_time');" />
 		<input type="button" class="button" id="btn_begin_time" value="{%SELECT_TIME}" onclick="return showCalendar('begin_time', '%Y-%m-%d %H:%M:%S', false, false, 'btn_begin_time');" />	
@@ -22,10 +23,10 @@
 
 	
 		<input type="hidden" value="IncomeBalance" name="m" />
-		<input type="hidden" value="dazhuanpan" name="a" />
+		<input type="hidden" value="index" name="a" />
 		
 		<input type="submit" class="button" value="{%SEARCH}" />
-
+		<input type="button" class="button" value="导出" onclick="export_csv()">
 </div>
 </form>
 <div class="blank5"></div>
@@ -35,17 +36,12 @@
 	name="duobao_item" 
 	datasource="list" 
 	show="id:期号|50px
-			,username:用户名
-			,jinbi:中奖金币
-			,zuanshi:中奖钻石
-			,yiuhujuan:中奖优惠券
-			,shiwu:中奖实物价值
-			,have:中奖实物信息
-			,money:消费金币
-			,jewel:消费钻石
-			,coupons:消费优惠券
-			,fenxiao:分销金额
-		 	"
+			,name:商品名称
+			,origin_price|format_price:成本价格
+			,max_buy:所需参与人次
+			,robot_count:机器人数量
+		 	,user_name:中奖者姓名
+		 	,lottery_time|to_date:开奖时间"
  />
 
 <div class="blank5"></div>
