--- a/admin/Tpl/default/Scratch/add.html
+++ b/admin/Tpl/default/Scratch/add.html
@@ -37,6 +37,13 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="item_title">基础库存:</td>
+                <td class="item_input">
+                    <input type="text" class="textbox" name="stock" value="" placeholder="0" />
+                </td>
+            </tr>
+
             <tr id="total_need_effect">
                 <td class="item_title">是否有效:</td>
                 <td class="item_input">
