--- a/admin/Tpl/default/Scratch/edit.html
+++ b/admin/Tpl/default/Scratch/edit.html
@@ -37,6 +37,14 @@
                 </td>
             </tr>
 
+
+            <tr>
+                <td class="item_title">基础库存:</td>
+                <td class="item_input">
+                    <input type="text" class="textbox" placeholder="0" name="stock" value="{$data.initial_stock}" />
+                </td>
+            </tr>
+
             <tr id="total_need_effect">
                 <td class="item_title">是否有效:</td>
                 <td class="item_input">
