--- a/admin/Tpl/default/Turntable/edit.html
+++ b/admin/Tpl/default/Turntable/edit.html
@@ -38,6 +38,14 @@
 				</td>
 			</tr>
 
+			<tr id="total_buy_price">
+				<td class="item_title">人工干预库存:</td>
+				<td class="item_input">
+					<input type="text" class="textbox" name="person_repertory" value="{$result.person_repertory}" />
+					<span class="tip_span">人工干预库存的设置</span>
+				</td>
+			</tr>
+
 			<tr id="tr_is_recomend">
 				<td class="item_title">活动是否有效:</td>
 				<td class="item_input">
@@ -46,13 +54,6 @@
 				</td>
 			</tr>
 
-			<tr id="robot_is_db_box">
-				<td class="item_title">夺宝时长:</td>
-				<td class="item_input">
-					<input type="text" class="textbox" name="robot_end_time" value="5" />
-					<span class="tip_span">[单位：分钟]</span>
-				</td>
-			</tr>
 
 			<tr>
 				<td class="item_title"></td>
