--- a/admin/Tpl/default/Turntable/index.html
+++ b/admin/Tpl/default/Turntable/index.html
@@ -89,6 +89,8 @@
 			,name:活动名称
 			,expenditure:花费单价
 			,type|type=$duobao['id']:支付类型
+			,repertory:库存
+			,person_repertory:人工干预库存
 		 	,status|get_status:有效"
             actionlist="id|get_handle=$duobao" />
 
