--- a/admin/Tpl/default/Turntable/prizeedit.html
+++ b/admin/Tpl/default/Turntable/prizeedit.html
@@ -56,9 +56,10 @@
 	</tr>
 
 	<tr>
-		<td class="item_title">库存:</td>
+		<td class="item_title">指定中奖人员:</td>
 		<td class="item_input">
-			<input type="text" class="textbox" name="repertory" value="{$result.repertory}"/>
+			<input type="text" class="textbox" name="lucky" value="{$result.lucky_person}"/>
+			<span class="tip_span">指定中奖人员的userid,以逗号间隔(,)</span>
 		</td>
 	</tr>
 
