--- a/admin/Tpl/default/Turntable/show.html
+++ b/admin/Tpl/default/Turntable/show.html
@@ -89,6 +89,7 @@
                 ,count:奖品数量
                 ,probability:中奖概率
                 ,predict_repertory:预库存
+                ,lucky_person:指定中奖人
                 ,status|get_status:有效"
             actionlist="id|get_handle=$duobao" />
 
