--- a/admin/Tpl/default/Turntable/prizeadd.html
+++ b/admin/Tpl/default/Turntable/prizeadd.html
@@ -56,12 +56,12 @@
 	</tr>
 
 	<tr>
-		<td class="item_title">库存:</td>
+		<td class="item_title">指定中奖人员:</td>
 		<td class="item_input">
-			<input type="text" class="textbox" name="repertory" />
+			<input type="text" class="textbox" name="lucky" value="{$result.lucky_person}"/>
+			<span class="tip_span">指定中奖人员的userid,以逗号间隔(,)</span>
 		</td>
 	</tr>
-
 	<tr id="tr_is_recomend">
 		<td class="item_title">活动是否有效:</td>
 		<td class="item_input">
